# Yolov5_ros2

./: LICENSE  README.md  package.xml  setup.py
config/: camera_info.yaml
launch/: yolov5_ros2.launch.py  yolov5_ros2_launch.py
yolov5_ros2/: tf_publish.py  yolo_detect.py  yolo_detect_2d.py
