<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov5_ros2</name>
  <version>0.0.0</version>
  <description>yolov5 with ros2</description>
  <maintainer email="1991170159@qq.com">fishros</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>yolov5</depend>
  <depend>tf2_ros</depend>
<depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
